added topology definitions, added greyscale for boxes

--- a/defns.tex
+++ b/defns.tex
@@ -46,8 +46,12 @@
     }}%
 }}
 
+% color
 \definecolor{FrameColor}{rgb}{0.25,0.25,1.0}
 \definecolor{TitleColor}{rgb}{1.0,1.0,1.0}
+% black and white
+\definecolor{FrameColor}{rgb}{0.9,0.9,0.9}
+\definecolor{TitleColor}{rgb}{0.0,0.0,0.0}
 
 \newenvironment{contlabelframe}[2][\Frame@Lab\ (cont.)]{% 
   % Optional continuation label defaults to the first label plus
@@ -92,8 +96,12 @@
       \vskip\FrameSep
     }}%
 }}
+% Color
 \definecolor{AxiomFrameColor}{rgb}{0.1,0.7,0.5}
 \definecolor{AxiomTitleColor}{rgb}{1.0,1.0,1.0}
+% black and white
+\definecolor{AxiomFrameColor}{rgb}{0.8,0.8,0.8}
+\definecolor{AxiomTitleColor}{rgb}{0.0,0.0,0.0}
 
 \newenvironment{acontlabelframe}[2][\Frame@Lab\ (cont.)]{% 
   % Optional continuation label defaults to the first label plus
@@ -139,8 +147,12 @@
     }}%
 }}
 
+% color
 \definecolor{TheoremFrameColor}{rgb}{1.0,0,0}
 \definecolor{TheoremTitleColor}{rgb}{1.0,1.0,1.0}
+% black and white
+\definecolor{TheoremFrameColor}{rgb}{0.7,0.7,0.7}
+\definecolor{TheoremTitleColor}{rgb}{0.0,0.0,0.0}
 
 \newenvironment{tcontlabelframe}[2][\Frame@Lab\ (cont.)]{% 
   % Optional continuation label defaults to the first label plus
@@ -347,7 +359,8 @@ If $x,y,z \in S$, if $x < y$ and $y < z$, then $x < z$
 \section*{A Taste of Topology}
 
 \begin{definition}{Metric Space}
-A \textbf{metric space} is a set $M$, the elements of which are referred to as points of $M$, together with a \textbf{metric} $d$ having the three properties that distance has in Euclidean space:
+A \textbf{metric space} is a pair $(M, d)$, where $M$ is a set and $d$ is a distance function on pairs of $M$, so that:
+$$d: M^2 \to \mbR$$
 \benu
 \im Positive Definiteness: $d(x,y) \geq 0$ and $d(x,y) = 0$ iff $x = y$
 \im Symmetry: $d(x,y) = d(y,x)$
@@ -356,14 +369,15 @@ A \textbf{metric space} is a set $M$, the elements of which are referred to as p
 \end{definition}
 
 \begin{definition}{Sequence}
+A \textbf{sequence} in $M$ is a list of elements of $M$ indexed by $\mbN$, $(a_i)_{i \in \mbN} \text{ or } (a_i)$
 Formally, a \textbf{sequence} is a function $f: \mbN \to M$, the metric space
 \end{definition}
 
 
 \begin{definition}{Convergence}
-	The sequence $(p_n)$ \textbf{converges to the limit} $p$ in $M$ if:
-	$$\forall\ep > 0  \exists N \in \mbN \text{ such that}$$
-	$$n \in \mbN  \text{ and }  n \geq N \implies d(p_n,p) < \ep$$
+	The sequence $(a_i)_{i \in \mbN}$ in $M$ \textbf{ converges } to $b \in M$ if:
+	$$\forall\ep > 0  \text{  } \exists N \in \mbN \text{ such that}$$
+	$$\forall j > N  \text{  } d(a_j,b) < \ep$$
 \end{definition}
 
 
@@ -373,28 +387,44 @@ Formally, a \textbf{sequence} is a function $f: \mbN \to M$, the metric space
 
 
 \begin{definition}{Continuity}
-	A function $f:M \to N$ is \textbf{continuous} if it satisfies the $\mathbf{\ep, \delta}$ \textbf{condition}
-$$\forall \ep > 0 \text{ and } \forall p \in M \text{  }\exists \delta > 0 \text{ such that}$$
-$$q \in M \text{ and } d(p,q) < \delta \implies d(fp, fq) < \ep$$
+	A function $f:M \to N$ is \textbf{continuous} if whenever $(a_i)$ is a sequence in $M$ and
+$$(a_i) \to b \text{ in } M,$$
+$$f((a_i)) \to f(b) \text{ in } N$$
 \end{definition}
 
 
 \begin{definition}{Homeomorphism}
 	If $f: M \to N$ is a bijection and $f$ is continuous and the inverse bijection $f^{-1}:N \to M$ is also continuous then $f$ is a \textbf{homeomorphism}
+	($M \cong N$)
 \end{definition}
 
 
+\begin{definition}{Limit Point}
+	For $S \subseteq M, p \in M, p$ is a \textbf{Limit point} of $S$ if there is a sequence $(a_i)$ so that $(a_i) \to p$ and $(a_i) \in S$
+	$$lim^M(S) = \{q \in M|q \text{ is a limit of }S\}$$
+\end{definition}
+
 \begin{definition}{Closedness}
-	
+	$S \subseteq M$ is \textbf{closed} in $M$ if it contains all of its limit points in $M$.
+	\begin{center}
+	OR \\
+	$S \subseteq M$ is \textbf{closed} in $M$ if $lim^M(S) \subseteq S$
+	\\ OR \\
+	$S \subseteq M$ is \textbf{closed} in $M$ if $lim^M(S) = S$
+	\end{center}
 \end{definition}
 
 
 \begin{definition}{Openness}
-	
+	A set $s \subset M$ is \textbf{open in M} if for every point $p \in S$ there is an $r \in \mbR$, $r>0$, so that for every $q \in M$,
+	if $d(p,q) < r$, then $q < S$
+	\begin{center}
+	OR
+	\\
+	$\forall p \in S \text{  } \exists r > 0 (B_r^M(p) \subseteq S)$
+	\end{center}
 \end{definition}
 
-
-\section*{Sequences}
 
 \section*{Series}
 \begin{axiom}{Absolutely Convergent}
@@ -410,3 +440,6 @@ $\Sigma (a_n)$ is conditionally convergent if and only if $\Sigma a_n$ is conver
 \end{definition}
 
 \end{document}
+
+\newpage
+\section*{Sequences}
