fixed some weirdness with some newcommands

--- a/ps2.tex
+++ b/ps2.tex
@@ -25,10 +25,10 @@
 %\usepackage{commath}
 %My commands
 %environment abbreviations
-\newcommand{\benu}{\begin{enumerate}}
-\newcommand{\eenu}{\end{enumerate}}
-\newcommand{\bed}{\begin{description}}
-\newcommand{\ed}{\end{description}}
+\newcommand{\benu}{\begin{enumerate}
+\newcommand{\eenu}{\end{enumerate}
+\newcommand{\bed}{\begin{description}
+\newcommand{\ed}{\end{description}
 \theoremstyle{definition}
 \newtheorem{theorem}{Theorem}
 \newtheorem{notation}[theorem]{Notation}
